--- a/readme.text
+++ b/readme.text
@@ -1,22 +1,9 @@
 altis paradise website
-Node.js use as server side
 
-node package:
-- mysql
-- php.js
-- socket.io
-- bcrypt
-- express.js
-- express-session
-- express-mysql-session
-- consolidate (Mustache 2)
-- (...)
+HTML5 , CSS3, SCSS with compass, Javascript, JQuery, boostrap
 
-HTML5 , CSS3, SCSS with compass, Javascript, JQuery, boostrap, Socket.io will be used in client side.
+designed by Mr_Freezeex
 
-Lead Developper: Mr_Freezeex
-
-Please report any bug to the issue tracker.
 
 /!\ The client side code is inappropriate to production use because the code is uncompressed
 
