--- a/readme.text
+++ b/readme.text
@@ -1,6 +1,6 @@
 altis paradise website
 
-HTML5 , CSS3, SCSS with compass, Javascript, JQuery, boostrap
+HTML5 , CSS3, SCSS with compass, Javascript, JQuery, bootstrap
 
 designed by Mr_Freezeex
 
